--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,16 @@
     <artifactId>pi</artifactId>
     <version>1.0.0</version>
     <description>Personal Finance Service</description>
-    <modules>
-        <module>pi-app-web</module>
-        <module>pi-app-api</module>
-        <module>pi-server-config</module>
-        <module>pi-server-discovery</module>
-        <module>pi-server-proxy</module>
-    </modules>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.version>1.0.0</project.version>
+        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+    </properties>
 
     <developers>
         <developer>
@@ -60,5 +61,40 @@
             <email>vzinchenko36@gmail.com</email>
         </developer>
     </developers>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.2.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
+
+    <modules>
+        <module>pi-accounting</module>
+        <module>pi-notification</module>
+        <module>pi-server-config</module>
+        <module>pi-server-discovery</module>
+        <module>pi-server-gateway</module>
+    </modules>
 
 </project>
