--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 
     <modules>
         <module>pfs-accounting</module>
+        <module>pfs-authentication</module>
         <module>pfs-notification</module>
         <module>pfs-server-config</module>
         <module>pfs-server-discovery</module>
