--- a/pfs-server-config/src/main/resources/shared/zuul.yml
+++ b/pfs-server-config/src/main/resources/shared/zuul.yml
@@ -1,4 +1,5 @@
 zuul:
+  sensitiveHeaders: Cookie, Set-Cookie # allow Zuul to propagate the “Authorization” HTTP header
   retryable: true
   ignored-services: "*"
   prefix: /api
