--- a/pfs-accounting/src/main/resources/application.yml
+++ b/pfs-accounting/src/main/resources/application.yml
@@ -32,6 +32,8 @@ spring:
         format_sql: true
         show_sql: true
         max_fetch_depth: 3
+        temp:
+          use_jdbc_metadata_defaults: false
 
 server:
   port: 10151
