--- a/pfs-notification/pom.xml
+++ b/pfs-notification/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ru.gb.dev.spring</groupId>
         <version>1.0.0</version>
-        <artifactId>pi</artifactId>
+        <artifactId>pfs</artifactId>
     </parent>
 
     <artifactId>pi-app-api</artifactId>
@@ -87,6 +87,16 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
 
