--- a/pfs-notification/src/main/resources/application.yml
+++ b/pfs-notification/src/main/resources/application.yml
@@ -5,7 +5,7 @@ info:
 
 spring:
   application:
-    name: accounting
+    name: notification
   main:
     allow-bean-definition-overriding: true
   cloud:
@@ -25,7 +25,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
