--- a/pfs-accounting/pom.xml
+++ b/pfs-accounting/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <postgresql.version>42.2.5</postgresql.version>
+        <h2.version>1.4.194</h2.version>
     </properties>
 
     <dependencies>
@@ -68,11 +69,6 @@
             <artifactId>annotations</artifactId>
             <version>16.0.2</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>2.3.2</version>
         </dependency>
 
         <dependency>
