--- a/pfs-ui/pom.xml
+++ b/pfs-ui/pom.xml
@@ -19,6 +19,13 @@
         <vaadin.version>12.0.6</vaadin.version>
     </properties>
 
+    <repositories>
+
+        <repository>
+            <id>vaadin-addons</id>
+            <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -98,6 +105,15 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin.addon</groupId>
+            <artifactId>vaadin-charts</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-charts-flow</artifactId>
         </dependency>
     </dependencies>
 
