added JWT support for accounting service

--- a/pfs-server-config/src/main/resources/shared/accounting.yml
+++ b/pfs-server-config/src/main/resources/shared/accounting.yml
@@ -10,6 +10,7 @@ spring:
       min-idle: 15
       max-idle: 20
     driver-class-name: org.postgresql.Driver
+    validationQuery: "SELECT 1"
   jpa:
     hibernate:
       ddl-auto: update
