--- a/pfs-accounting/src/main/resources/bootstrap.yml
+++ b/pfs-accounting/src/main/resources/bootstrap.yml
@@ -13,14 +13,21 @@ spring:
   cloud:
     config:
       discovery:
-        service-id: accounting
+        service-id: config
         enabled: true
+      fail-fast: true
+      uri: http://localhost:8888
 
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://localhost:8901/auth/user
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 # For detailed logging during development
 logging:
