--- a/pfs-server-config/src/main/resources/shared/authentication.yml
+++ b/pfs-server-config/src/main/resources/shared/authentication.yml
@@ -4,7 +4,7 @@ server:
 spring:
   profile: dev
   datasource:
-    url: jdbc:postgresql://localhost:5432/users
+    jdbc-url: jdbc:postgresql://localhost:5432/identity
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
